# humeris

./: .gitignore  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRACT_V1_16_0.md  CONTRACT_V1_17_0.md  LICENSE  LICENSE-COMMERCIAL.md  PRE_RELEASE_CHECKLIST.md  README.md  SESSION_HANDOFF.md  pyproject.toml  view_constellation.py
.github/workflows/: release.yml
docs/: api-reference.md  architecture.md  delta.md  export-formats.md  getting-started.md  integration-guide.md  licensing.md  python-api.md  research_algorithms.md  simulation-json.md  simulator-integrations.md  trade-study-guide.md  validation.md  viewer-server.md
docs/contracts/: APP-ROADMAP.md  api_schema_diff.json
docs/gmat-parity-runs/: LATEST  LATEST_REPORT  index.json
docs/gmat-parity-runs/run-0001-a00b904-dirty-vs-d9025c0-clean/: manifest.json
docs/gmat-parity-runs/run-0002-882ffe8-dirty-vs-d9025c0-clean/: REPORT.md  gmat_values.json  humeris_values.json  manifest.json
docs/gmat-parity-runs/run-0003-882ffe8-dirty-vs-d9025c0-clean/: REPORT.md  manifest.json
docs/papers/: TLDR.md
docs/papers/tier1/: README.md  tier1_01_functorial_force_composition.md  tier1_02_hodge_cusum_topology_detector.md  tier1_03_gramian_reconfiguration.md  tier1_04_koopman_spectral_conjunction.md  tier1_05_competing_risks_population.md
docs/papers/tier2/: README.md  tier2_06_network_sir_cascade.md  tier2_07_hamiltonian_fisher_rao.md  tier2_08_surface_code_coverage.md  tier2_09_percolation_debris_coupled.md  tier2_10_bayesian_intent_estimation.md
docs/papers/tier3/: README.md  tier3_11_turing_morphogenesis_constellation.md  tier3_12_helmholtz_free_energy_slots.md  tier3_13_nash_equilibrium_conjunction.md  tier3_14_melnikov_separatrix_surfing.md  tier3_15_spectral_gap_coverage.md
docs/specs/accuracy/: ACC-00-overview.md  ACC-01-ephemeris-unify.md  ACC-02-time-fidelity.md  ACC-03-frame-rotation.md  ACC-04-gravity-cleanup.md  ACC-05-atmosphere-wire.md  ACC-06-tidal-fidelity.md  ACC-07-srp-fidelity.md  ACC-08-dense-output.md  ACC-09-conjunction-fidelity.md  ACC-10-atmosphere-full.md  ACC-11-coverage-misc.md
examples/: README.md  constellation.sc  optimized.csv  trade_study.py
scripts/: generate_api_schema_diff.py  generate_space_weather.py  run_gmat_mirror_compare.py
src/constellation_generator/: __init__.py  cli.py
src/constellation_generator/adapters/: __init__.py  blender_exporter.py  celestia_exporter.py  celestrak.py  cesium_viewer.py  concurrent_celestrak.py  csv_exporter.py  czml_exporter.py  czml_visualization.py  geojson_exporter.py  kml_exporter.py  ksp_exporter.py  spaceengine_exporter.py  stellarium_exporter.py  ubox_exporter.py  viewer_server.py
src/constellation_generator/data/: __init__.py  egm96_70.json  eop_finals2000a.json  iau2000b_nutation.json  ocean_tide_coefficients.json  space_weather_historical.json
src/humeris/: __init__.py  cli.py
src/humeris/adapters/: __init__.py  (+15 more)
tests/: test_access_windows.py  test_adaptive_integration.py  test_albedo_srp.py  test_atmosphere.py  test_bayesian_proposals_r2.py  test_blender_exporter.py  test_cascade_analysis.py  test_cascade_sir.py  test_celestia_exporter.py  test_cesium_viewer.py  test_communication_analysis.py  test_competing_risks.py  test_concurrent_celestrak.py  test_conjunction.py  test_conjunction_ftle.py  test_conjunction_management.py  test_constellation.py  test_constellation_metrics.py  test_constellation_operability.py  test_control_analysis.py  test_control_proposals_r1.py  test_coordinate_frames.py  test_coverage.py  test_coverage_optimization.py  test_coverage_proposals_r3.py  test_czml_exporter.py  test_czml_visualization.py  test_debris_proposals_r3.py  test_decay_analysis.py  test_deorbit.py  test_design_optimization.py  test_design_proposals_r2.py  test_design_sensitivity.py  test_dilution_of_precision.py  test_earth_orientation.py  test_eclipse.py  test_ecology_proposals_r2.py  test_enrichment.py  test_environment_analysis.py  test_export.py  (+96 more)
(+140 files in other folders)
