[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "constellation-generator"
version = "1.9.0"
description = "Generate Walker constellation satellite shells and fetch live orbital data for orbit simulation tools"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT AND Proprietary"}
authors = [
    {name = "Jeroen"},
]
keywords = ["satellite", "constellation", "orbital-mechanics", "walker", "celestrak", "sgp4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = []

[project.optional-dependencies]
live = ["sgp4>=2.22"]
dev = [
    "sgp4>=2.22",
    "pytest>=8.0",
]

[project.scripts]
constellation-generator = "constellation_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
