[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "humeris"
version = "1.22.0"
description = "Astrodynamics library for satellite constellation design, analysis, and operations"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Jeroen Visser"},
]
keywords = ["satellite", "constellation", "orbital-mechanics", "astrodynamics", "walker", "celestrak", "sgp4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
live = ["sgp4>=2.22"]
dev = [
    "sgp4>=2.22",
    "pytest>=8.0",
]

[project.scripts]
humeris = "humeris.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
humeris = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
